[package]
name = "debugger_test"
version = "0.1.3"
edition = "2018"
description = """
Provides a proc macro for writing tests that launch a debugger and run commands while verifying the output.
"""
documentation = "https://docs.rs/debugger_test"
readme = "README.md"
homepage = "https://github.com/microsoft/rust_debugger_test"
repository = "https://github.com/microsoft/rust_debugger_test"
license = "MIT OR Apache-2.0"
keywords = ["debugger", "cdb", "natvis", "debugger_visualizer"]
exclude = ["/.github/*"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.40"
log = "0.4.17"
quote = "1.0.20"
strum = { version = "0.24", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
debugger_test_parser = "0.1.0"
regex = "1.6.0"
